--- a/src/Containers/Main/Main.scss
+++ b/src/Containers/Main/Main.scss
@@ -4,8 +4,11 @@
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
-        align-items: center;
-        align-content:space-around;
-
-        height: 100vh;
+        align-content:space-around; 
 }
+
+h2 {
+        text-align: center;
+        height: 5vh;
+}
+
