--- a/src/Containers/Main/Main.scss
+++ b/src/Containers/Main/Main.scss
@@ -1,3 +1,23 @@
+@media screen and (min-width: 320px) {
+
+.main-container {
+    
+        text-align: center;
+        }
+        
+h2 {
+        text-align: center;
+        height: 5vh;
+        }
+
+}
+
+
+
+
+
+@media screen and (min-width: 1024px) {
+
 .main-container {
     
         display: flex;
@@ -5,6 +25,7 @@
         justify-content: center;
         flex-wrap: wrap;
         align-content:space-around; 
+
 }
 
 h2 {
@@ -12,3 +33,4 @@ h2 {
         height: 5vh;
 }
 
+}
