--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,3 +1,5 @@
+@use "./../../Styles/variables" as *;
+
 @media screen and (min-width: 320px) {
     .card {
         text-align: center;
@@ -10,8 +12,6 @@
             padding-top: 1em;
             margin: 1rem;
             text-align: center;
-            
-    
         
         }
     
@@ -33,6 +33,14 @@
             font-size: 25%;
     
         }
+
+        &__firstBrewed {
+            color: $color-heading;
+        }
+
+        &__ph {
+            color: $color-heading;
+        }
         }
     }
 @media screen and (min-width: 1024px) {
@@ -43,8 +51,8 @@
 
     &__details {
         
-        border: 2px solid black;
-        height: 50%;
+        border: 4px solid $color-boarder;
+        height: 45em;
         padding-top: 1em;
         margin: 1rem;
         
@@ -61,14 +69,32 @@
 
     &__name {
         text-align: center;
-        margin-top: 2em;
-        font-size: 30%;
+        margin-top: 1.5em;
+        margin-bottom: 2em;
+        font-size: 1.5em;
+        
         
     }
 
     &__description {
         font-size: 25%;
+        height: 27%;
+        color: $color-heading;
+        padding: 2em;
+        line-height: 150%;
 
+    }
+
+    &__firstBrewed {
+        color: $color-heading;
+    }
+
+    &__ph {
+        color: $color-heading;
+    }
+
+    &__abv {
+        color: $color-heading;
     }
     }
 }
