--- a/src/Containers/Main/Main.scss
+++ b/src/Containers/Main/Main.scss
@@ -1,4 +1,6 @@
-@media screen and (min-width: 320px) {
+@use "./../../Styles/variables" as *;
+
+@media screen and (min-width: $mobile-breakpoint) {
 
 .main-container {
     
@@ -8,15 +10,13 @@
 h2 {
         text-align: center;
         height: 5vh;
+        color: $color-heading;
         }
 
 }
 
 
-
-
-
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop-breakpoint) {
 
 .main-container {
     
@@ -31,6 +31,8 @@ h2 {
 h2 {
         text-align: center;
         height: 5vh;
+        color: $color-heading;
+
 }
 
 }
