Added more styling to mobile viewpoint

--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -6,18 +6,11 @@ $color-button:#f9bc60;
 $color-buttonText: #001e1d;
 $color-boarder: #e16162;
 
-$color-second-background: #fef6e4;
-$color-second-heading: #001858;
-$color-second-button:#f582ae;
-$color-second-buttonText: #001858;
-$color-second-boarder: #8bd3dd;
-
-
-
-
+// $color-second-background: #fef6e4;
+// $color-second-heading: #001858;
+// $color-second-button:#f582ae;
+// $color-second-buttonText: #001858;
+// $color-second-boarder: #8bd3dd;
 
 $mobile-breakpoint: 320px;
-// $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1024px;
-// $large-desktop-breakpoint: 1440px;
-// $extra-large-desktop-breakpoint: 2560px;
