--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -7,7 +7,7 @@
     
         &__details {
             
-            border: 2px solid black;
+            border: 4px solid $color-boarder;
             height: 50%;
             padding-top: 1em;
             margin: 1rem;
@@ -25,12 +25,16 @@
         &__name {
             text-align: center;
             margin-top: 2em;
-            font-size: 30%;
+            font-size: 1.5em;
             
         }
     
         &__description {
             font-size: 25%;
+            height: 27%;
+            color: $color-heading;
+            padding: 2em;
+            line-height: 150%;
     
         }
 
@@ -39,6 +43,10 @@
         }
 
         &__ph {
+            color: $color-heading;
+        }
+
+        &__abv {
             color: $color-heading;
         }
         }
@@ -55,9 +63,6 @@
         height: 45em;
         padding-top: 1em;
         margin: 1rem;
-        
-
-    
     }
 
     &__img {
