--- a/src/Components/RadioButton/RadioButton.scss
+++ b/src/Components/RadioButton/RadioButton.scss
@@ -4,7 +4,12 @@ button {
     width: 20vw;
     margin: 1rem;
     padding: 1em;
-    background-color: $color-heading;
+    background-color: $color-button;
     border: 4px solid $color-boarder;
+    font-weight: 900;
     
+}
+
+button:hover {
+    opacity: 60%;
 }
